Cleanup ModelChangeController some.